[tool.poetry]
name = "b4.12"
version = "0.1.0"
description = "\"задание про питон с юзерами и атлетами\""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.19"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
